# building_domain

./: .gitignore  .mcp.json  CLAUDE.md  MCP_DEMO.md  NOTICE  OVERVIEW.md  PITCH.md  PROPOSAL.md  README.md  _test.ifc  alembic.ini  bsos_graph.pkl  bsos_graph.pkl.sha256  pyproject.toml
.beads/: issues.jsonl  metadata.json
.claude/: settings.json
alembic/: env.py
alembic/versions/: 539fc33e63b4_add_antipattern_subject_id.py  5b0f3e266c92_phase2_tables.py  8661e7e10d0b_initial_schema.py  ada30a7ca5e3_add_pattern_subject_id.py  add_schema_ifc_class_values_add_schema_knowledge_origin_and_ifc_.py  b6fd228e79cb_phase3_tables.py
data/: apl_connectivity_analysis.txt  apl_patterns.json
scripts/: analyse_apl_connectivity.py  extract_apl.py  ifc_compliance_report.py
src/bsos/: __init__.py  __main__.py  config.py  vocab.py
tests/: conftest.py
tests/e2e/: test_topology_eval.py
tests/fixtures/: fake_responses.py
tests/integration/: test_abstraction_view.py  test_auto_promotion.py  test_cli_phase2.py  test_conflict_detection.py  test_full_pipeline.py  test_init_config.py  test_mcp_context_propose.py  test_mcp_ifc_psets.py  test_mcp_server.py  test_mcp_server_phase2.py  test_normalize_cli.py  test_pass1.py  test_pass10a.py  test_pass10b.py  test_pass10c.py  test_pass2.py  test_pass3.py  test_pass4.py  test_pass5.py  test_pass6.py  test_pass7.py  test_pass8.py  test_pass9.py  test_persistence.py  test_phase3_integration.py  test_status_query.py
tests/unit/: test_llm_cache.py  test_llm_retry.py  test_models.py  test_ollama_provider.py  test_vocab.py
(+73 files in other folders)
