[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bsos"
version = "0.1.0"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "pydantic>=2.0",
    "sqlmodel",
    "alembic",
    "networkx",
    "typer",
    "instructor",
    "anthropic",
    "sentence-transformers",
    "numpy",
    "scipy",
    "scikit-learn",
    "structlog",
    "joblib",
    "mcp",
    "pypdf",
]

[project.scripts]
bsos = "bsos.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/bsos"]
